Bug 1251527 - Don't override visible regions for background-attachment:fixed. r=mstange