layout/base/nsDisplayList.h
@@ -2730,8 +2730,6 @@ public:
 
   virtual bool ShouldFixToViewport(nsDisplayListBuilder* aBuilder) override;
 
-  void MarkBoundsAsVisible(nsDisplayListBuilder* aBuilder);
-
 protected:
   typedef class mozilla::layers::ImageContainer ImageContainer;
   typedef class mozilla::layers::ImageLayer ImageLayer;
